--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   <div id="fortuneSlip" class="fortune-slip"></div>
   <a-scene id="ar-scene" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
     <a-assets>
-      <a-asset-item id="minecraft_chest" src="./static/3D-file/glb/untitled.glb"></a-asset-item>
+      <a-asset-item id="minecraft_chest" src="./static/3D-file/glb/ChestOpen3.glb"></a-asset-item>
       <a-asset-item id="minecraft_chest_animate" src="./static/3D-file/glb/untitled10.glb"></a-asset-item>
     </a-assets>
 
     <a-entity id="example-target" mindar-image-target="targetIndex: 0">
-      <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005"  visible="true"></a-gltf-model>
+      <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer visible="true"></a-gltf-model>
       <a-gltf-model id="minecraft_chest_model_animate" src="#minecraft_chest_animate" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" animation-mixer="loop: once; clip: *; timeScale: 0" visible="false"></a-gltf-model>
     </a-entity>
 
