--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       .catch(error => console.error('Error loading data:', error));
     });
 
-    function initializeAR(fortunes, config) {
+    function initializeAR(fortunes, config, state1Data) {
       const arScene = document.getElementById('ar-scene');
       const exampleTarget = document.querySelector("#example-target");
 
