--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="fortuneSlip" class="fortune-slip"></div>
   <a-scene id="ar-scene" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
     <a-assets>
-      <a-asset-item id="minecraft_chest" src="${modelConfig.modelSrc}"></a-asset-item>
+      <a-asset-item id="minecraft_chest" src=""></a-asset-item>
       <a-asset-item id="minecraft_chest_animate" src="./static/3D-file/glb/untitled10.glb"></a-asset-item>
     </a-assets>
 
@@ -75,6 +75,8 @@
       minecraftChestAnimate.style.display = "none";
       minecraftChest.classList.add("shaking");
       minecraftChestAnimate.setAttribute("visible", "false");
+      const modelSrc = modelConfig.modelSrc;
+      minecraftChest.setAttribute("src", `${modelSrc}${modelName}`);
 
       let isTargetFound = false;
 
