--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       minecraftChest.classList.add("shaking");
       minecraftChestAnimate.setAttribute("visible", "false");
       const modelSrc = modelConfig.modelSrc;
-      minecraftChest.setAttribute("src", `${modelSrc}${modelName}`);
+      minecraftChest.setAttribute("src", `${modelSrc}123`);
 
       let isTargetFound = false;
 
