--- a/index.html
+++ b/index.html
@@ -43,22 +43,17 @@
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       Promise.all([
-        // fetch('./static/data/fortunes.json').then(response => response.json()),
-        // fetch('./static/data/config.json').then(response => response.json()),
-        // fetch('./static/data/model/state1.json').then(response => response.json()),
-        // fetch('./static/data/model/state2.json').then(response => response.json()),
-        fetch('./static/data/editable.json').then(response => response.json()),
-
+        fetch('./static/data/fortunes.json').then(response => response.json()),
+        fetch('./static/data/config.json').then(response => response.json()),
+        fetch('./static/data/model/state1.json').then(response => response.json()),
+        fetch('./static/data/model/state2.json').then(response => response.json()),
       ])
-      .then(([editableData]) => {
+      .then(([fortunesData, configData, state1Data, state2Data]) => {
         console.log("Fortunes Data:", fortunesData);
         console.log("Config Data:", configData);
         console.log("Model Config Data:", state1Data);
         console.log("Model Config Data:", state2Data);
-        const fortunes = editableData.fortunes;
-        const configData = editableData.config;
-        const state1Data = editableData.state1;
-        const state2Data = editableData.state2;
+        const fortunes = fortunesData.fortunes;
         initializeAR(fortunes, configData, state1Data,  state2Data);
       })
       .catch(error => console.error('Error loading data:', error));
